2010-01-05  James Robinson  <jamesr@google.com>

        Reviewed by Eric Seidel.

        Typing in Google Wave repaints the whole screen
        https://bugs.webkit.org/show_bug.cgi?id=32295

        Add a repaint test to make sure that when mutations happen in a grandchild of a block element that has no in-flow children
        the entire block element is not unnecessarily repainted.
        The bug only shows up when running pixel tests.

        * fast/repaint/block-no-inflow-children.html: Added.
        * platform/mac/fast/repaint/block-no-inflow-children-expected.checksum: Added.
        * platform/mac/fast/repaint/block-no-inflow-children-expected.png: Added.
        * platform/mac/fast/repaint/block-no-inflow-children-expected.txt: Added.

2010-01-05  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Darin Adler.

        LayoutTests/animations/change-keyframes.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=33233

        The timing calculation was just off. It was starting the
        second animation at 600ms and then checking to be half-way
        done with the 1 second animation at 1000ms. Instead, just
        modify the animation to run a bit earlier.

        * animations/change-keyframes.html:

2010-01-05  Chris Marrin  <cmarrin@apple.com>

        Fixed a bug in testcase. Passing an empty array to texImage2D
        now must be done with 'null' not '0'.

        * fast/canvas/webgl/script-tests/texImageTest.js:
        * fast/canvas/webgl/texImageTest-expected.txt:

2010-01-05  Rachel Petterson  <rlp@google.com>

        Reviewed by Simon Fraser.

        With Chris Marrin  <cmarrin@apple.com>.

        New test for texImage2d and texSubImage2d cases 
        New test for texImage2d using ImageData which tests rendering.
        https://bugs.webkit.org/show_bug.cgi?id=31562
        Also bug: https://bugs.webkit.org/show_bug.cgi?id=31493

        * fast/canvas/webgl/script-tests/texImageTest.js: Added.