@@ -1,3 +1,14 @@
+2010-01-05  Darin Adler  <darin@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        CDATA sections are merged into Text nodes when normalize() is used
+        https://bugs.webkit.org/show_bug.cgi?id=33191
+
+        * fast/dom/Node/normalize-with-cdata-expected.txt: Added.
+        * fast/dom/Node/normalize-with-cdata.html: Added.
+        * fast/dom/Node/script-tests/normalize-with-cdata.js: Added.
+
 2010-01-05  James Robinson  <jamesr@google.com>
 
         Reviewed by Eric Seidel.
